--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: Sandipan Haldar
 site_url: https://www.sandipan1.github.io
+repo_url: https://github.com/sandipan1/sandipan1.github.io
 theme:
   name: material
   features:
