--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,7 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+      - run: mkdir -p .cache 
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
