--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - name: Install dependencies
-        run: uv pip sync --system pyproject.toml
-        run: uv pip install importlib_metadata
+        run: |
+          uv pip sync --system pyproject.toml
+          uv pip install importlib_metadata
       - run: mkdocs gh-deploy --force
