--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,7 @@ jobs:
           uv venv
           uv pip sync pyproject.toml
           uv pip install importlib_metadata
+          uv pip install mkdocs mkdocs-material
       - name: Deploy to GitHub Pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
