--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,27 +17,18 @@ jobs:
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: 3.x
       - name: Install uv
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-          export PATH="$HOME/.local/bin:$HOME/.cargo/bin:$PATH"
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
+          key: mkdocs-material-${{ env.cache_id }}
+          path: .cache
           restore-keys: |
-            venv-${{ runner.os }}-
+            mkdocs-material-
       - name: Install dependencies
-        run: |
-          uv venv
-          uv pip sync pyproject.toml
-          uv pip install importlib_metadata
-          uv pip install mkdocs mkdocs-material
-      - name: Deploy to GitHub Pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          mkdocs gh-deploy --force --verbose
+        run: uv pip sync --system pyproject.toml
+      - run: mkdocs gh-deploy --force
