--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Sandipan Haldar
-site_url: https://www.sandipan1.github.io
+site_url: https://sandipanhaldar.com/
 repo_url: https://github.com/sandipan1/sandipan1.github.io
 theme:
   name: material
